# ugc-sdk

./: README.md  pyproject.toml  setup.py
docs/: protocol.md
examples/: main.py
ugc_sdk/: __init__.py  client.py  protocol.py
