[tool.poetry]
name = "ugc-sdk"
version = "0.1.0"
description = ""
authors = ["mc_fdc <Masato.04.11.2007@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
websockets = "^10.3"
orjson = "^3.7.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
